Fix jumping scrollbar issue

--- a/src/styles/site.css
+++ b/src/styles/site.css
@@ -10,6 +10,9 @@ html {
 
   color: var(--color-text);
   background-color: var(--color-background);
+
+  /* More Elegant Fix for Jumping Scrollbar Issue - https://css-tricks.com/elegant-fix-jumping-scrollbar-issue/ */
+  margin-left: calc(100vw - 100%);
 }
 
 a {
